[tool.poetry]
name = "iterlab"
version = "0.1.1"
description = "Collection of helper functions that perform operations on iterables."
authors = ["Zachary Einck <zacharyeinck@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
